<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_story.NewStoryActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:paddingTop="@dimen/margin_high"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_high">

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_marginTop="@dimen/margin_low"
                android:id="@+id/imageView"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_story"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadingProgressBar"
                app:srcCompat="@drawable/image_placeholder" />

            <com.ddr1.storyapp.view.Button
                android:id="@+id/btnCamera"
                android:layout_width="@dimen/width_button_new_story"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_high"
                android:text="@string/camera"
                app:layout_constraintEnd_toStartOf="@+id/btnGallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.ddr1.storyapp.view.Button
                android:id="@+id/btnGallery"
                android:layout_width="@dimen/width_button_new_story"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_high"
                android:text="@string/gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCamera"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.ddr1.storyapp.view.EditText
                android:id="@+id/edtDesc"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/height_edit_text_new_story"
                android:layout_marginTop="@dimen/margin_high"
                android:gravity="top|start"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingHorizontal="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.ddr1.storyapp.view.Button
        android:id="@+id/btnUpload"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_high"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>